--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -15,12 +15,15 @@
 // application.  They may override existing framework styles
 // directives or represent styles for custom application 
 // modules
-// @import 'skins/manifest.gen';
+@import 'skins/manifest.gen';
 
 // Sections code includes page-specific and layout-related 
 // styles
 
 
 body {
-  color: pink;
+  color: green;
 }
+
+
+
