--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -57,9 +57,9 @@ body {
 }
 
 .cluster {
-  stroke : "red";
-  fill : #6be7fe;
-  stroke-width : "2";
+  stroke : #000099;
+  fill : #89b4fd;
+  stroke-width : 1.2px;
   stroke-linecap : "round";
 }
 
@@ -67,7 +67,12 @@ body {
   fill : #2fbf78;
 }
 
-
+circle:hover {
+  stroke : #c30a55;
+  stroke-width : 3px;
+  stroke-opacity: 0.7;
+  cursor:pointer;
+}
 
 
 
