--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -52,8 +52,22 @@ body {
   fill : #c7ffef;
 }
 
+.exit:hover {
+  stroke : #d1b6f1;
+  stroke-width : 3px;
+  stroke-opacity: 0.7;
+  cursor:pointer;
+}
+
 .entry {
   fill : #c7ffef;
+}
+
+.entry:hover {
+  stroke : #d1b6f1;
+  stroke-width : 3px;
+  stroke-opacity: 0.7;
+  cursor:pointer;
 }
 
 .cluster {
@@ -63,17 +77,26 @@ body {
   stroke-linecap : "round";
 }
 
-.issue {
-  fill : #2fbf78;
-}
-
-circle:hover {
+.node.cluster:hover {
   stroke : #c30a55;
   stroke-width : 3px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
 
+.issue {
+  fill : #2fbf78;
+}
+
+text:hover {
+  stroke-width : 1px;
+  stroke : #534741;
+}
+
+text {
+  font-family: Tahoma;
+  fill : #534741;
+}
 
 
 
