--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -43,18 +43,18 @@ body {
 }
 
 #canvas {
-  width : 650px;
-  height : inherit;
-  fill : #e9eceb;
+  width: 650px;
+  height: 900px;
+  fill: #e9eceb;
 }
 
 .exit {
-  fill : #c7ffef;
+  fill: #c7ffef;
 }
 
 .exit:hover {
-  stroke : #d1b6f1;
-  stroke-width : 3px;
+  stroke: #d1b6f1;
+  stroke-width: 3px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
@@ -64,39 +64,40 @@ body {
 }
 
 .entry:hover {
-  stroke : #d1b6f1;
-  stroke-width : 3px;
+  stroke: #d1b6f1;
+  stroke-width: 3px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
 
 .cluster {
-  stroke : #000099;
-  fill : #89b4fd;
-  stroke-width : 1.2px;
-  stroke-linecap : "round";
+  stroke: #000099;
+  fill: #89b4fd;
+  stroke-width: 1.2px;
+  stroke-linecap: "round";
 }
 
 .node.cluster:hover {
-  stroke : #c30a55;
-  stroke-width : 3px;
+  stroke: #c30a55;
+  stroke-width: 3px;
   stroke-opacity: 0.7;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .issue {
-  fill : #2fbf78;
+  fill: #2fbf78;
 }
 
 text:hover {
-  stroke-width : 1px;
-  stroke : #534741;
+  stroke-width: 1px;
+  stroke: #534741;
 }
 
 text {
-  font-family: Tahoma;
-  fill : #534741;
+  font-family: monospace;
+  fill: #534741;
 }
+
 
 
 
