--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -23,17 +23,26 @@
 
 body {
   color: #00f;
+  width: inherit;
+  height: inherit;
+  margin: 0px; 
+  padding:0px;
 }
 
+div {
+  width: inherit;
+}
 
 .graph {
   color: $brand-secondary;
+  width: inherit;
 }
 
 
-.node {
+.nodes {
+  width: 600px;
   stroke: #333;
-  fill: #fff;
+  fill: #fff; 
 }
 
 .edgePath path {
@@ -43,9 +52,13 @@ body {
 }
 
 #canvas {
-  width: 650px;
+  width: 100%;
   height: 900px;
   fill: #e9eceb;
+}
+
+#zoomGraph {
+  width: inherit;
 }
 
 .exit {
@@ -94,9 +107,11 @@ text:hover {
 }
 
 text {
-  font-family: monospace;
+  font-family: 'Open Sans', sans-serif;
   fill: #534741;
+  text-align: center;
 }
+
 
 
 
