--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -27,6 +27,12 @@ body {
   height: inherit;
   margin: 0px; 
   padding:0px;
+  background-image: url("http://deepskycolors.com/pics/astro/2011/11/mb_2011-11_Aries.jpg"); 
+  // background-color: yellow;
+}
+
+.ng-scope:before {
+  opacity: 0.7;
 }
 
 div {
@@ -36,69 +42,86 @@ div {
 .graph {
   color: $brand-secondary;
   width: inherit;
+  // background-image: url("../styles/constellation.jpg");
 }
 
 
 .nodes {
   width: 600px;
   stroke: #333;
-  fill: #fff; 
 }
 
-.edgePath path {
-  stroke: #333;
-  fill: #333;
-  stroke-width: 1.2px;
+.path {
+  stroke: white;
+  stroke-width: 2.3px;
+  stroke-linecap: "butt";
 }
 
 #canvas {
   width: 100%;
   height: 900px;
   fill: #e9eceb;
+  opacity: 1;
 }
 
 #zoomGraph {
   width: inherit;
 }
-
 .exit {
-  fill: #c7ffef;
+  fill: white;
+  opacity: 1;
+  stroke: #cc0000;
+  stroke-opacity: 0.6;
+  stroke-width: 7px;
 }
 
 .exit:hover {
+  opacity: 1;
   stroke: #d1b6f1;
-  stroke-width: 3px;
+  stroke-width: 10px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
 
 .entry {
-  fill : #c7ffef;
+  opacity: 1;
+  fill: white;
+  stroke-opacity: 0.6;
+  stroke: #cc0000;
+  stroke-width: 7px;
 }
 
 .entry:hover {
+  opacity: 1;
   stroke: #d1b6f1;
-  stroke-width: 3px;
+  stroke-width: 10px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
 
 .cluster {
-  stroke: #000099;
-  fill: #89b4fd;
-  stroke-width: 1.2px;
+  opacity: 1;
+  stroke: #154de5;
+  fill: white;
+  stroke-width: 7px;
+  stroke-opacity: 0.7;
   stroke-linecap: "round";
 }
 
 .node.cluster:hover {
-  stroke: #c30a55;
-  stroke-width: 3px;
+  opacity: 1;
+  stroke: #ffa500;
+  stroke-width: 10px;
   stroke-opacity: 0.7;
   cursor: pointer;
 }
 
 .issue {
-  fill: #2fbf78;
+  opacity: 1;
+  fill: white;
+  stroke: #66cdaa;
+  stroke-width: 7px;
+  stroke-opacity: 0.7;
 }
 
 text:hover {
@@ -106,13 +129,20 @@ text:hover {
   stroke: #534741;
 }
 
+.label{
+  align: center;
+}
+
 text {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Cousine', monospace;
+  stroke: #534741;
+  stroke-width: 0.8px;
   fill: #534741;
-  text-align: center;
+  align: center;
 }
 
 
+// '<tspan xml:space="preserve" dy="1em" x="1" class="hide">heyhey</tspan>'
 
 
 
