--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -92,7 +92,7 @@ div {
 .exit:hover {
   opacity: 1;
   stroke: #d1b6f1;
-  stroke-width: 10px;
+  stroke-width: 12px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
@@ -108,7 +108,7 @@ div {
 .entry:hover {
   opacity: 1;
   stroke: #d1b6f1;
-  stroke-width: 10px;
+  stroke-width: 12px;
   stroke-opacity: 0.7;
   cursor:pointer;
 }
@@ -125,7 +125,7 @@ div {
 .node.cluster:hover {
   opacity: 1;
   stroke: #ffa500;
-  stroke-width: 10px;
+  stroke-width: 12px;
   stroke-opacity: 0.7;
   cursor: pointer;
 }
@@ -138,6 +138,14 @@ div {
   stroke-opacity: 0.7;
 }
 
+.issue:hover {
+  opacity: 1;
+  fill: white;
+  stroke: #fff68f;
+  stroke-width: 12px;
+  stroke-opacity: 0.7;
+  cursor: pointer;
+}
 text:hover {
   stroke-width: 1px;
   stroke: #534741;
