(cleanup) Clean up console.log expression and create new folder for image

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -28,8 +28,7 @@ body {
   margin: 0px; 
   padding: 0px;
   background-color: black;
-  // background-image: url('/assets/stars.jpg');
-  // background-image: url("http://deepskycolors.com/pics/astro/2011/11/mb_2011-11_Aries.jpg"); 
+  // background: url(stars.jpg);
 }
 
 div.top{
