(feat) Change the url path to render the background image

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -28,8 +28,8 @@ body {
   height: inherit;
   margin: 0px; 
   padding: 0px;
-  background-color: black;
-  // background: url(stars.jpg);
+  // background-color: black;
+  background-image: url(../images/stars.jpg);
 }
 
 div.top{
