(feat) Partially implement the right click pop out window

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -228,7 +228,13 @@ div.description {
   width: 100%;
 }
 
+div.menu {
+    float: right;
+    width: 100px;
+    height: 100px;
+}
 
-
-
+li {
+  color: white;
+}
 
