--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -219,6 +219,14 @@ div.wrapper {
   stroke-linecap: "round";
 }
 
+.cluster.pick {
+  opacity: 1;
+  stroke: #ffff00;
+  stroke-width: 12px;
+  stroke-opacity: 0.7;
+  cursor: pointer;
+}
+
 .node.cluster:hover {
   opacity: 1;
   stroke: #ffa500;
