--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -85,6 +85,30 @@ div.wrapper {
   width: 100vw;
   z-index: 1;
 
+  div.graphpanel{
+    @include box-sizing(border-box);
+    color: $brand-secondary;
+    float: left;
+    height: 100%;
+    padding-right: 15px;
+    width: 50%;
+
+    div.graph {
+      height: 100%;
+      width: 100%;
+    
+      svg#canvas {
+        width: 100%;
+        height: 100%;
+        // min-height: 100%;
+        fill: #e9eceb;
+        opacity: 1;
+        display: block;
+        margin: auto;
+      }
+    }   
+  }
+
   div.information { // migrate these styles to div.info-panel
     @include box-sizing(border-box);
     background-color: rgba(0, 0, 0, 0.4);
@@ -95,7 +119,7 @@ div.wrapper {
     height: 100%;
     padding: 15px;    
     width: 50%;
-  
+
     div.info-panel{
       h2, h3, h4{
         font-family: 'Muli', sans-serif;
@@ -106,34 +130,16 @@ div.wrapper {
       h3{
         font-size: 20pt;
       }
+
       h4{
         font-size: 16pt;
         font-style: italic;
       }
+
       p{
         font-size: 12pt;
         font-weight: normal;
       }
-    }
-  }
-
-  div.graph {
-    @include box-sizing(border-box);
-    border: 1px solid red;
-    color: $brand-secondary;
-    float: left;
-    height: 100%;
-    padding-right: 15px;
-    width: 50%;
-  
-    svg#canvas {
-      width: 100%;
-      height: 900px;
-      // min-height: 100%;
-      fill: #e9eceb;
-      opacity: 1;
-      display: block;
-      margin: auto;
     }
   }
 }
