--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -102,10 +102,11 @@ div.wrapper {
   
   div.queue {
     @include box-sizing(border-box);
-    background-color: rgba(0, 0, 0, 0.4);
-    border: 1px solid #979797;
+    background-color: rgba(0, 0, 0, 0.7);
+    // border: 1px solid #979797;
     height: 10%;
     width: 100%;
+    margin-bottom: 15px;
 
     svg.queue{
       height: 100%;
@@ -122,7 +123,7 @@ div.wrapper {
     height: 90%;
     padding-right: 15px;
     width: 50%;
-    border: 1px solid #979797;
+    // border: 1px solid #979797;
 
     div.graph {
       height: 100%;
