(feat) Add loading bar reflecting the status of the cluster

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -432,7 +432,6 @@ div.description {
 
 
 .chart {
-    background: #eee;
     padding: 3px;
 }
 
@@ -444,7 +443,7 @@ div.description {
 }
 
 .chart div {
-  font: 10px sans-serif;
+  font: 18px 'Muli', sans-serif; ;
   background-color: steelblue;
   text-align: right;
   padding: 3px;
