--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -95,7 +95,7 @@ div.wrapper {
   @include box-sizing(border-box);
   height: 100vh;
   padding: 15px;
-  padding-top: $top-bar-height+15;
+  padding-top: $top-bar-height;
   width: 100vw;
   z-index: 1;
 
@@ -104,7 +104,7 @@ div.wrapper {
     @include box-sizing(border-box);
     background-color: rgba(0, 0, 0, 0.7);
     // border: 1px solid #979797;
-    height: 10%;
+    height: 12%;
     width: 100%;
     margin-bottom: 15px;
 
@@ -120,7 +120,7 @@ div.wrapper {
     @include box-sizing(border-box);
     color: $brand-secondary;
     float: left;
-    height: 90%;
+    height: 88%;
     padding-right: 15px;
     width: 50%;
     // border: 1px solid #979797;
@@ -156,7 +156,7 @@ div.wrapper {
     color: $text-color;
     float:right;
     font-size: 30px;
-    height: 90%;
+    height: 88%;
     padding: 15px;    
     width: 50%;
 
@@ -191,7 +191,7 @@ div.wrapper {
     float:right;
     font-size: 30px;
     padding: 15px;    
-    height: 90%;
+    height: 88%;
     width: 50%;
 
     fieldset, label, input, option, textarea{
@@ -296,6 +296,10 @@ $hover-yellow: #ffe100;
   fill: $hover-yellow;
   stroke-width: 5px;
   cursor: pointer;
+}
+
+marker.path:hover {
+  fill: $hover-yellow;
 }
 
 .edgePath:hover {
